# easy-media

./: README.md  config.yml
client/: .env.development  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/src/: App.vue  main.ts  router.ts
client/src-tauri/: tauri.conf.json
client/src/pages/: Home.vue  Video.vue
client/src/states/: root.ts
server/: Cargo.toml  config.yml
server/src/: main.rs
src/: main.rs
