[package]
name = "easy-media"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-web = "4"
actix-web-actors = "4"
actix-files = "0.6"
futures = "0.3"
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = "1.37"
